objects/ASI_HK_CRM_SO_Routing_Table_Header__c.object
<CustomObject>
    <fields>
        <fullName>ASI_HK_CRM_Field_API_Name_1__c</fullName>
        <label>Field API Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Field_API_Name_2__c</fullName>
        <label>Field API Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Field_API_Name_3__c</fullName>
        <label>Field API Name 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Value_1__c</fullName>
        <label>Value 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Value_2__c</fullName>
        <label>Value 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Value_3__c</fullName>
        <label>Value 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SO Routing Table Header</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Field_API_Name_1__c</columns>
        <columns>ASI_HK_CRM_Value_1__c</columns>
        <columns>ASI_HK_CRM_Field_API_Name_2__c</columns>
        <columns>ASI_HK_CRM_Value_2__c</columns>
        <columns>ASI_HK_CRM_Field_API_Name_3__c</columns>
        <columns>ASI_HK_CRM_Value_3__c</columns>
        <columns>ASI_HK_CRM_Field_API_Name_4__c</columns>
        <columns>ASI_HK_CRM_Value_4__c</columns>
        <columns>ASI_HK_CRM_Field_API_Name_5__c</columns>
        <columns>ASI_HK_CRM_Value_5__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Route Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SO Routing Table Headers</pluralLabel>
    <recordTypes>
        <fullName>ASI_HK_CRM_SO_Routing_Table_Header</fullName>
        <active>true</active>
        <label>HK SO Routing Table Header</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>